--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "node ./server.mjs"
+    "dev": "node ./server.js"
   },
   "dependencies": {
-    "vue": "^3.4.31",
-    "vue-router": "^4.4.0"
+    "vue": "^3.5.6",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "latest",
     "@vitejs/plugin-vue": "latest",
     "@vitejs/plugin-vue-jsx": "latest",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "vite": "latest"
   }
 }
