--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "@types/express": "^5.0.1",
     "@types/node": "latest",
-    "@vitejs/plugin-vue": "latest",
-    "@vitejs/plugin-vue-jsx": "latest",
-    "express": "^4.21.2",
-    "vite": "latest"
+    "@vitejs/plugin-vue": "^5.2.3",
+    "@vitejs/plugin-vue-jsx": "^4.1.2",
+    "express": "^5.1.0",
+    "vite": "^6.2.4"
   }
 }
